# green_guard

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
artifacts/: label_encoder_esg.pkl
artifacts/legacy/: claim_label_encoder.pkl  label_mapping_relevance.json
data/processed/: gg_valid_idx_v1.csv
data/processed/splits/: gg_test_idx_v1.csv  gg_train_idx_v1.csv
data/processed/stage1/: green-guard_stage1_test_v1.csv  green-guard_stage1_train_v1.csv  green-guard_stage1_valid_v1.csv
data/processed/stage2/: green-guard_stage2_test_v1.csv  green-guard_stage2_train_v1.csv  green-guard_stage2_valid_v1.csv
data/raw/: green-guard_esg_sentences_v1.csv.csv
models/: README.md
models/roberta_esg_category_v1/: config.json
models/roberta_esg_relevance_v1/: config.json
scripts/: add_labels_to_config.py  audit_fix_greenguard.py  fix_and_inject_labels.py
source/greenguard/: inference.py
source/greenguard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_inference.py
